--- a/app/styles/styles.less
+++ b/app/styles/styles.less
@@ -4,8 +4,8 @@
     box-sizing: border-box;
 }
 
-@import (less) '../../bower_components/normalize-css/normalize.css';
-@import (less) '../../bower_components/components-font-awesome/less/font-awesome.less';
+@import (less) '../../node_modules/normalize.css/normalize.css';
+@import (less) '../../node_modules/font-awesome/less/font-awesome.less';
 @import (less) url('http://fonts.googleapis.com/css?family=Lato:300,700');
 
 // font awesome path
